--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.4.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.4"
+  "typescript": "^4.9.4",
+  "@types/react": "^18.0.28"
   }
 }
