--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "fhammerschlagcorp",
   "version": "1.0.0",
@@ -9,15 +8,17 @@
   },
   "dependencies": {
     "@thirdweb-dev/react": "^3.11.12",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "next": "13.4.12",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.4",
+    "@types/react": "^18.0.28",
+    "@types/node": "^18.16.3",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0"
-  },
-  "devDependencies": {
-  "typescript": "^4.9.4",
-  "@types/react": "^18.0.28"
   }
 }
+
